[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorregistry"
version = "0.0.1"
description = "Deterministic provenance verification for AI and IP artifacts"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Anchor Registry", email = "anchor.registry@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://anchorregistry.com"
Repository = "https://github.com/anchorregistry/ar-python"

