[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorregistry"
version = "0.1.5"
description = "Trustless Python client for the AnchorRegistry provenance chain on Base (Ethereum L2)"
readme = "README.md"
license = {text = "BUSL-1.1"}
authors = [
    {name = "Ian Moore", email = "icmoore@anchorregistry.com"}
]
requires-python = ">=3.11"
dependencies = [
    "web3>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
analytics = [
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["anchorregistry*"]

[project.urls]
Homepage = "https://anchorregistry.com"
Documentation = "https://anchorregistry.readthedocs.io"
Repository = "https://github.com/anchorregistry/ar-python"
